--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "swaingotnochill",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "openai": "^4.28.4"
   }
 }
